# django-bulksms-kenya

./: MANIFEST.in  README.md  README.rst  setup.cfg
django_bulksms_kenya.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
