[metadata]
name = django-bulksms-kenya
version = 1.1
description = A Django App to send Bulk SMS in any Django Projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/royceltd/django-bulksms-kenya
author = Royce Technologies Ltd
author_email = info@roycetechnologies.co.ke
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    # Framework :: Django :: 2.2  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.0
install_requires =
    Django >= 2.2  # Replace "X.Y" as appropriate